# lane_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.txt  detect.cfg  detect.cpp  detect.cu  detector.cpp  detector.cu  detector.h  install_dependencies.sh  lane.cpp  lane.h  lanes.py  main.py  polifitgsl.cpp  polifitgsl.h  uartcommander.cpp  uartcommander.h  video.cpp  warp.py
gpu_version/: CMakeLists.txt  video.cpp
src/: CMakeLists.txt  detect.cpp  detector.cpp  detector.cu  detector.h  helpers.cpp  helpers.h  lane.cpp  lane.h  logger.cpp  logger.h  polifitgsl.cpp  polifitgsl.h  uartcommander.cpp  uartcommander.h
test/: camera.cfg  detect.cfg  pi.cfg
